fixing-favourites-BackHome-Alignment

--- a/NetflixClone/src/Components/Favourites.css
+++ b/NetflixClone/src/Components/Favourites.css
@@ -31,6 +31,7 @@
     align-items: center;
     gap: 12px;
     width: fit-content;
+    margin:top:39px;
     cursor: pointer;
     padding: 12px 18px;
     border-radius: 12px;
